Implement rankings base endpoints
